--- a/kubernetes/defaults.yaml
+++ b/kubernetes/defaults.yaml
@@ -8,16 +8,12 @@ kubernetes:
   tmpdir: '/tmp/kubernetes'
   kernel: {{ grains.kernel|lower }}
   arch: ''
-
+  dir:
+    binary: /opt/kubernetes
+    source: /tmp/kubernetes
   pkg:
-    deps:
-      - curl
-      - bzip2
-      - gzip
-    binary:
-      basedir: /opt/kubernetes
-    source:
-      basedir: /tmp/kubernetes_kubectl
+    use_upstream_repo: False
+    deps: []
     repo:
       humanname: kubernetes
       name: kubernetes
@@ -45,6 +41,7 @@ kubernetes:
       use_upstream_binary: True
       use_upstream_source: False
       binary:
+        name: kubectl
         uri:  https://storage.googleapis.com/kubernetes-release/release
         source: None                                                                   #set in map.jinja
         source_hash: ecec7fe4ffa03018ff00f14e228442af5c2284e57771e4916b977c20ba4e5b39  #linux amd64 binary
@@ -77,7 +74,8 @@ kubernetes:
       use_upstream_binary: True
       use_upstream_source: False
       binary:
-        uri:  https://storage.googleapis.com/minikube/releases
+        name: minikube
+        uri:  https://github.com/kubernetes/minikube/releases/download
         source: None                                                                   #set in map.jinja
         source_hash: 123fc9f5656333fb2927cf91666a91cd5b28ef97503418ac2a90a2109e518ed9  #linux amd64 binary
         trim_output: True   {# works in 2018.3.2. onwards #}
@@ -92,3 +90,9 @@ kubernetes:
         enforce_toplevel: False
         options: '--strip-components=1'
 
+  retry_option:
+    # https://docs.saltstack.com/en/latest/ref/states/requisites.html#retrying-states
+    attempts: 3
+    until: True
+    interval: 60
+    splay: 10
