--- a/kitchen.yml
+++ b/kitchen.yml
@@ -11,88 +11,158 @@ driver:
 # Make sure the platforms listed below match up with
 # the `env.matrix` instances defined in `.travis.yml`
 platforms:
-  ## SALT 2019.2
+  ## SALT `master`
+  - name: debian-10-master-py3
+    driver:
+      image: netmanagers/salt-master-py3:debian-10
+  - name: ubuntu-1804-master-py3
+    driver:
+      image: netmanagers/salt-master-py3:ubuntu-18.04
+  - name: centos-8-master-py3
+    driver:
+      image: netmanagers/salt-master-py3:centos-8
+  - name: fedora-31-master-py3
+    driver:
+      image: netmanagers/salt-master-py3:fedora-31
+  - name: opensuse-leap-151-master-py3
+    driver:
+      image: netmanagers/salt-master-py3:opensuse-leap-15.1
+      run_command: /usr/lib/systemd/systemd
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: amazonlinux-2-master-py3
+    driver:
+      image: netmanagers/salt-master-py3:amazonlinux-2
+  - name: arch-base-latest-master-py2
+    driver:
+      image: netmanagers/salt-master-py2:arch-base-latest
+      run_command: /usr/lib/systemd/systemd
+
+  ## SALT `3000.1`
+  - name: debian-10-3000-1-py3
+    driver:
+      image: netmanagers/salt-3000.1-py3:debian-10
+  - name: ubuntu-1804-3000-1-py3
+    driver:
+      image: netmanagers/salt-3000.1-py3:ubuntu-18.04
+  - name: centos-8-3000-1-py3
+    driver:
+      image: netmanagers/salt-3000.1-py3:centos-8
+  - name: fedora-31-3000-1-py3
+    driver:
+      image: netmanagers/salt-3000.1-py3:fedora-31
+  - name: opensuse-leap-151-3000-1-py3
+    driver:
+      image: netmanagers/salt-3000.1-py3:opensuse-leap-15.1
+      run_command: /usr/lib/systemd/systemd
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: amazonlinux-2-3000-1-py3
+    driver:
+      image: netmanagers/salt-3000.1-py3:amazonlinux-2
+  - name: arch-base-latest-3000-1-py2
+    driver:
+      image: netmanagers/salt-3000.1-py2:arch-base-latest
+      run_command: /usr/lib/systemd/systemd
+
+  ## SALT `2019.2`
+  - name: debian-10-2019-2-py3
+    driver:
+      image: netmanagers/salt-2019.2-py3:debian-10
   - name: debian-9-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:debian-9
   - name: ubuntu-1804-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:ubuntu-18.04
+  - name: ubuntu-1604-2019-2-py3
+    driver:
+      image: netmanagers/salt-2019.2-py3:ubuntu-16.04
+  - name: centos-8-2019-2-py3
+    driver:
+      image: netmanagers/salt-2019.2-py3:centos-8
   - name: centos-7-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:centos-7
-  - name: fedora-29-2019-2-py3
+  - name: fedora-31-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:fedora-29
-  - name: opensuse-leap-15-2019-2-py3
+      image: netmanagers/salt-2019.2-py3:fedora-31
+  - name: opensuse-leap-151-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:opensuse-leap-15
+      image: netmanagers/salt-2019.2-py3:opensuse-leap-15.1
+      run_command: /usr/lib/systemd/systemd
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: amazonlinux-2-2019-2-py3
+    driver:
+      image: netmanagers/salt-2019.2-py3:amazonlinux-2
+  - name: ubuntu-1804-2019-2-py2
+    driver:
+      image: netmanagers/salt-2019.2-py2:ubuntu-18.04
+  - name: amazonlinux-1-2019-2-py2
+    driver:
+      image: netmanagers/salt-2019.2-py2:amazonlinux-1
+      run_command: /sbin/init
+  - name: arch-base-latest-2019-2-py2
+    driver:
+      image: netmanagers/salt-2019.2-py2:arch-base-latest
       run_command: /usr/lib/systemd/systemd
 
-  ## SALT 2018.3
+  ## SALT `2018.3`
+  - name: centos-7-2018-3-py3
+    driver:
+      image: netmanagers/salt-2018.3-py3:centos-7
+  - name: fedora-30-2018-3-py3
+    driver:
+      image: netmanagers/salt-2018.3-py3:fedora-30
   - name: debian-9-2018-3-py2
     driver:
       image: netmanagers/salt-2018.3-py2:debian-9
+  - name: debian-8-2018-3-py2
+    driver:
+      image: netmanagers/salt-2018.3-py2:debian-8
+  - name: ubuntu-1804-2018-3-py2
+    driver:
+      image: netmanagers/salt-2018.3-py2:ubuntu-18.04
   - name: ubuntu-1604-2018-3-py2
     driver:
       image: netmanagers/salt-2018.3-py2:ubuntu-16.04
-  - name: centos-7-2018-3-py2
+  - name: centos-6-2018-3-py2
     driver:
-      image: netmanagers/salt-2018.3-py2:centos-7
-  - name: fedora-29-2018-3-py2
-    driver:
-      image: netmanagers/salt-2018.3-py2:fedora-29
-  # TODO: Use this when fixed instead of `opensuse-leap-42`
-  # Ref: https://github.com/netmanagers/salt-image-builder/issues/2
-  # - name: opensuse-leap-15-2018-3-py2
-  #   driver:
-  #     image: netmanagers/salt-2018.3-py2:opensuse-leap-15
-  #     run_command: /usr/lib/systemd/systemd
-  - name: opensuse-leap-42-2018-3-py2
-    driver:
-      image: netmanagers/salt-2018.3-py2:opensuse-leap-42
-      run_command: /usr/lib/systemd/systemd
-
-  ## SALT 2017.7
-  - name: debian-8-2017-7-py2
-    driver:
-      image: netmanagers/salt-2017.7-py2:debian-8
-  - name: ubuntu-1604-2017-7-py2
-    driver:
-      image: netmanagers/salt-2017.7-py2:ubuntu-16.04
-  # TODO: Modify the formula to work for non-`systemd` platforms
-  - name: centos-6-2017-7-py2
-    driver:
-      image: netmanagers/salt-2017.7-py2:centos-6
+      image: netmanagers/salt-2018.3-py2:centos-6
       run_command: /sbin/init
-  - name: fedora-28-2017-7-py2
+  - name: opensuse-leap-151-2018-3-py2
     driver:
-      image: netmanagers/salt-2017.7-py2:fedora-28
-  - name: opensuse-leap-42-2017-7-py2
+      image: netmanagers/salt-2018.3-py2:opensuse-leap-15.1
+      run_command: /usr/lib/systemd/systemd
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: amazonlinux-1-2018-3-py2
     driver:
-      image: netmanagers/salt-2017.7-py2:opensuse-leap-42
+      image: netmanagers/salt-2018.3-py2:amazonlinux-1
+      run_command: /sbin/init
+  - name: arch-base-latest-2018-3-py2
+    driver:
+      image: netmanagers/salt-2018.3-py2:arch-base-latest
       run_command: /usr/lib/systemd/systemd
 
 provisioner:
   name: salt_solo
-  log_level: info
+  # log_level: debug
   salt_install: none
   require_chef: false
   formula: kubernetes
   salt_copy_filter:
     - .kitchen
     - .git
-  state_top:
-    base:
-      '*':
-        - kubernetes
-  pillars:
-    top.sls:
-      base:
-        '*':
-          - kubernetes
-  pillars_from_files:
-    kubernetes.sls: pillar.example
 
 verifier:
   # https://www.inspec.io/
@@ -101,12 +171,56 @@ verifier:
   # cli, documentation, html, progress, json, json-min, json-rspec, junit
   reporter:
     - cli
-  inspec_tests:
-    - path: test/integration/cli
-    - path: test/integration/bbl
-    - path: test/integration/bosh_cli
 
 suites:
-  - name: cli
-  - name: bbl
-  - name: bosh_cli
+  - name: default
+    provisioner:
+      state_top:
+        base:
+          '*':
+            - kubernetes.clean
+            - kubernetes
+      pillars:
+        top.sls:
+          base:
+            '*':
+              - kubernetes
+      pillars_from_files:
+        kubernetes.sls: test/salt/default/pillar.sls
+    verifier:
+      inspec_tests:
+        - path: test/integration/default
+  - name: pkgrepo
+    provisioner:
+      state_top:
+        base:
+          '*':
+            - kubernetes.clean
+            - kubernetes
+      pillars:
+        top.sls:
+          base:
+            '*':
+              - kubernetes
+      pillars_from_files:
+        kubernetes.sls: test/salt/default/pillar.sls
+    verifier:
+      inspec_tests:
+        - path: test/integration/pkgrepo
+  - name: source
+    provisioner:
+      state_top:
+        base:
+          '*':
+            - kubernetes.clean
+            - kubernetes
+      pillars:
+        top.sls:
+          base:
+            '*':
+              - kubernetes
+      pillars_from_files:
+        kubernetes.sls: test/salt/source/pillar.sls
+    verifier:
+      inspec_tests:
+        - path: test/integration/source
