--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ jobs:
           - MINIKUBE_HOME=$HOME
           - CHANGE_MINIKUBE_NONE_USER=true
           - KUBECONFIG=$HOME/.kube/config
-    - env
+    - env:
         INSTANCE=default-ubuntu-1804-master-py3
         global:
           - CHANGE_MINIKUBE_NONE_USER=true
