--- a/kitchen.yml
+++ b/kitchen.yml
@@ -15,19 +15,29 @@ platforms:
   - name: debian-10-master-py3
     driver:
       image: netmanagers/salt-master-py3:debian-10
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: ubuntu-1804-master-py3
     driver:
       image: netmanagers/salt-master-py3:ubuntu-18.04
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: centos-8-master-py3
     driver:
       image: netmanagers/salt-master-py3:centos-8
+      provision_command:
+        - yum install conntrack-tools -y
   - name: fedora-31-master-py3
     driver:
       image: netmanagers/salt-master-py3:fedora-31
+      provision_command:
+        - dnf install conntrack-tools -y
   - name: opensuse-leap-151-master-py3
     driver:
       image: netmanagers/salt-master-py3:opensuse-leap-15.1
       run_command: /usr/lib/systemd/systemd
+      provision_command:
+        - zypper --non-interactive install conntrack-tools
     # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
     # => SCP did not finish successfully (255):  (Net::SCP::Error)
     transport:
@@ -35,28 +45,43 @@ platforms:
   - name: amazonlinux-2-master-py3
     driver:
       image: netmanagers/salt-master-py3:amazonlinux-2
+      provision_command:
+        - yum install conntrack-tools -y
   - name: arch-base-latest-master-py2
     driver:
       image: netmanagers/salt-master-py2:arch-base-latest
       run_command: /usr/lib/systemd/systemd
+      provision_command:
+        - (test -x /usr/bin/pacman-mirrors && /usr/bin/pacman-mirrors -g) || true
+        - pacman -S --noconfirm conntrack-tools
 
   ## SALT `3000.1`
   - name: debian-10-3000-1-py3
     driver:
       image: netmanagers/salt-3000.1-py3:debian-10
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: ubuntu-1804-3000-1-py3
     driver:
       image: netmanagers/salt-3000.1-py3:ubuntu-18.04
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: centos-8-3000-1-py3
     driver:
       image: netmanagers/salt-3000.1-py3:centos-8
+      provision_command:
+        - yum install conntrack-tools -y
   - name: fedora-31-3000-1-py3
     driver:
       image: netmanagers/salt-3000.1-py3:fedora-31
+      provision_command:
+        - dnf install conntrack-tools -y
   - name: opensuse-leap-151-3000-1-py3
     driver:
       image: netmanagers/salt-3000.1-py3:opensuse-leap-15.1
       run_command: /usr/lib/systemd/systemd
+      provision_command:
+        - zypper --non-interactive install conntrack-tools
     # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
     # => SCP did not finish successfully (255):  (Net::SCP::Error)
     transport:
@@ -64,37 +89,58 @@ platforms:
   - name: amazonlinux-2-3000-1-py3
     driver:
       image: netmanagers/salt-3000.1-py3:amazonlinux-2
+      provision_command:
+        - yum install conntrack-tools -y
   - name: arch-base-latest-3000-1-py2
     driver:
       image: netmanagers/salt-3000.1-py2:arch-base-latest
       run_command: /usr/lib/systemd/systemd
+      provision_command:
+        - (test -x /usr/bin/pacman-mirrors && /usr/bin/pacman-mirrors -g) || true
+        - pacman -S --noconfirm conntrack-tools
 
   ## SALT `2019.2`
   - name: debian-10-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:debian-10
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: debian-9-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:debian-9
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: ubuntu-1804-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:ubuntu-18.04
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: ubuntu-1604-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:ubuntu-16.04
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: centos-8-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:centos-8
+      provision_command:
+        - yum install conntrack-tools -y
   - name: centos-7-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:centos-7
+      provision_command:
+        - yum install conntrack-tools -y
   - name: fedora-31-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:fedora-31
+      provision_command:
+        - yum install conntrack-tools -y
   - name: opensuse-leap-151-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:opensuse-leap-15.1
       run_command: /usr/lib/systemd/systemd
+      provision_command:
+        - zypper --non-interactive install conntrack-tools
     # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
     # => SCP did not finish successfully (255):  (Net::SCP::Error)
     transport:
@@ -102,45 +148,70 @@ platforms:
   - name: amazonlinux-2-2019-2-py3
     driver:
       image: netmanagers/salt-2019.2-py3:amazonlinux-2
+      provision_command:
+        - yum install conntrack-tools -y
   - name: ubuntu-1804-2019-2-py2
     driver:
       image: netmanagers/salt-2019.2-py2:ubuntu-18.04
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: amazonlinux-1-2019-2-py2
     driver:
       image: netmanagers/salt-2019.2-py2:amazonlinux-1
       run_command: /sbin/init
+      provision_command:
+        - yum install conntrack-tools -y
   - name: arch-base-latest-2019-2-py2
     driver:
       image: netmanagers/salt-2019.2-py2:arch-base-latest
       run_command: /usr/lib/systemd/systemd
+      provision_command:
+        - (test -x /usr/bin/pacman-mirrors && /usr/bin/pacman-mirrors -g) || true
+        - pacman -S --noconfirm conntrack-tools
 
   ## SALT `2018.3`
   - name: centos-7-2018-3-py3
     driver:
       image: netmanagers/salt-2018.3-py3:centos-7
+      provision_command:
+        - yum install conntrack-tools -y
   - name: fedora-30-2018-3-py3
     driver:
       image: netmanagers/salt-2018.3-py3:fedora-30
+      provision_command:
+        - yum install conntrack-tools -y
   - name: debian-9-2018-3-py2
     driver:
       image: netmanagers/salt-2018.3-py2:debian-9
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: debian-8-2018-3-py2
     driver:
       image: netmanagers/salt-2018.3-py2:debian-8
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: ubuntu-1804-2018-3-py2
     driver:
       image: netmanagers/salt-2018.3-py2:ubuntu-18.04
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: ubuntu-1604-2018-3-py2
     driver:
       image: netmanagers/salt-2018.3-py2:ubuntu-16.04
+      provision_command:
+        - apt-get -qq -y install conntrack
   - name: centos-6-2018-3-py2
     driver:
       image: netmanagers/salt-2018.3-py2:centos-6
       run_command: /sbin/init
+      provision_command:
+        - yum install conntrack-tools -y
   - name: opensuse-leap-151-2018-3-py2
     driver:
       image: netmanagers/salt-2018.3-py2:opensuse-leap-15.1
       run_command: /usr/lib/systemd/systemd
+      provision_command:
+        - zypper --non-interactive install conntrack-tools
     # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
     # => SCP did not finish successfully (255):  (Net::SCP::Error)
     transport:
@@ -149,10 +220,15 @@ platforms:
     driver:
       image: netmanagers/salt-2018.3-py2:amazonlinux-1
       run_command: /sbin/init
+      provision_command:
+        - yum install conntrack-tools -y
   - name: arch-base-latest-2018-3-py2
     driver:
       image: netmanagers/salt-2018.3-py2:arch-base-latest
       run_command: /usr/lib/systemd/systemd
+      provision_command:
+        - (test -x /usr/bin/pacman-mirrors && /usr/bin/pacman-mirrors -g) || true
+        - pacman -S --noconfirm conntrack-tools
 
 provisioner:
   name: salt_solo
