--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,22 @@ version: '~> 1.0'
 language: 'ruby'
 cache: 'bundler'
 
+env:
+  global:
+    - CHANGE_MINIKUBE_NONE_USER=true
+    - MINIKUBE_WANTUPDATENOTIFICATION=false
+    - MINIKUBE_WANTREPORTERRORPROMPT=false
+    - MINIKUBE_HOME=$HOME
+    - CHANGE_MINIKUBE_NONE_USER=true
+    - KUBECONFIG=$HOME/.kube/config
+
 ## Services config
 services:
   - docker
 
 ## Script to run for the test stage
 script:
+  - env
   - bin/kitchen verify "${INSTANCE}"
 
 ## Stages and jobs matrix
