refactor(formula): simplify; add devspace, k3s; expand tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,9 +69,9 @@ jobs:
     # Make sure the instances listed below match up with
     # the `platforms` defined in `kitchen.yml`
     - env: INSTANCE=default-debian-10-master-py3
-    # - env: INSTANCE=default-ubuntu-1804-master-py3
-    - env: INSTANCE=default-centos-8-master-py3
-    - env: INSTANCE=default-fedora-31-master-py3
+    - env: INSTANCE=default-ubuntu-1804-master-py3
+    # env: INSTANCE=default-centos-8-master-py3
+    # env: INSTANCE=default-fedora-31-master-py3
     - env: INSTANCE=default-opensuse-leap-151-master-py3
     # - env: INSTANCE=default-amazonlinux-2-master-py3
     # - env: INSTANCE=default-debian-10-3000-2-py3
@@ -92,7 +92,7 @@ jobs:
     # - env: INSTANCE=default-centos-8-2019-2-py3
     # - env: INSTANCE=default-centos-7-2019-2-py3
     # - env: INSTANCE=default-fedora-31-2019-2-py3
-    # - env: INSTANCE=default-opensuse-leap-151-2019-2-py3
+    # env: INSTANCE=default-opensuse-leap-151-2019-2-py3
     # - env: INSTANCE=default-amazonlinux-2-2019-2-py3
     # - env: INSTANCE=default-centos-6-2019-2-py2
     # - env: INSTANCE=default-amazonlinux-1-2019-2-py2
